RESOLVED FIXED128317
The source frame request is not the same thing as the original request
https://bugs.webkit.org/show_bug.cgi?id=128317
Summary The source frame request is not the same thing as the original request
Anders Carlsson
Reported 2014-02-06 11:06:02 PST
The source frame request is not the same thing as the original request
Attachments
Patch (2.29 KB, patch)
2014-02-06 11:06 PST, Anders Carlsson
no flags
Patch (2.29 KB, patch)
2014-02-06 11:08 PST, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2014-02-06 11:06:51 PST
Anders Carlsson
Comment 2 2014-02-06 11:08:32 PST
Anders Carlsson
Comment 3 2014-02-06 11:21:57 PST
Note You need to log in before you can comment on or make changes to this bug.