The source frame request is not the same thing as the original request https://bugs.webkit.org/show_bug.cgi?id=128317

Reviewed by Andreas Kling.

Grab the source frame URL From the WebFrameProxy object.

* UIProcess/Cocoa/NavigationState.mm:
(WebKit::frameInfoFromWebFrameProxy):
(WebKit::NavigationState::PolicyClient::decidePolicyForNavigationAction):

Canonical link: https://commits.webkit.org/146333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163551 268f45cc-cd09-0410-ab3c-d52691b4dbfc